# my_repo

./: .gitignore  README.md
LogReader/cmake/: common.cmake
LogReader/log_reader/: CMakeLists.txt
LogReader/log_reader/include/: lr_filter.hpp
LogReader/log_reader/src/: log_reader.cpp  lr_filter.cpp  lr_utils.cpp
archived/LogReader/: CMakeLists.txt  README.md
archived/LogReader/log_reader/api/: log_reader.hpp  lr_api.hpp
archived/LogReader/log_reader/include/: lr_utils.hpp
archived/LogReader/sample/: CMakeLists.txt  main.cpp
archived/progs/C++/ConcurrentProgramming/src/: prog_thread.h
archived/progs/C++/temp/: a.out
archived/test_progs/C++/ConcurrentProgramming/src/: prog.cpp
archived/test_progs/C++/temp/: temp.cpp
dots/git/: .gitconfig
dots/zsh/: .zshrc
rust/cargo/guessing_game/src/: main.rs
xcode/remember_cpp/remember_cpp/: main.cpp  test.hpp
xcode/remember_cpp/remember_cpp.xcodeproj/: project.pbxproj
xcode/remember_cpp/remember_cpp.xcodeproj/project.xcworkspace/xcuserdata/slava.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/remember_cpp/remember_cpp.xcodeproj/xcuserdata/slava.xcuserdatad/xcschemes/: xcschememanagement.plist
